# simpleblog

./: api.db  hi.cabal  stack.yaml
src/: Main.hs
src/Protocols/: AssistAttack.hs
src/Web/Forms/: Login.hs
src/Web/Model/: CoreTypes.hs
src/Web/Views/: Home.hs  Login.hs
static/css/: blog.css  home.css  login.css
