name:                hi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
      static/css/login.css
      static/bootstrap4.2.1/bootstrap.min.css
      static/bootstrap4.2.1/bootstrap.min.js
      static/bootstrap4.2.1/jquery-3.3.1.slim.min.js
      static/bootstrap4.2.1/popper.min.js
      -- static/css/blog.css
      -- static/css/home.css
      -- static/css/bootstrap-theme.min.css
      -- static/css/bootstrap.min.css
      -- static/fonts/glyphicons-halflings-regular.eot
      -- static/fonts/glyphicons-halflings-regular.svg
      -- static/fonts/glyphicons-halflings-regular.ttf
      -- static/fonts/glyphicons-halflings-regular.woff
      -- static/js/bootstrap.min.js
      -- static/js/jquery.min.js


executable hi
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Protocols.AssistAttack
                       ,Web.Views.Login
                       ,Web.Views.Home
                       ,Web.Model.CoreTypes
                       ,Web.Forms.Login



  build-depends:       base >= 4.7 && < 5
                               ,parsec
                               ,Spock
                               ,Spock-digestive
                               ,digestive-functors
                               ,digestive-functors-lucid
                               ,http-types
                               ,text
                               ,mtl
                               ,lucid
                               ,Spock-lucid
                               ,aeson
                               ,wai-middleware-static
                               ,hvect
                               ,monad-logger
                               ,persistent-sqlite
                               ,persistent
                               ,persistent-template
                               ,time
                               ,resourcet
                               ,bytestring
                               ,string-conversions

